--- a/client/views/home.html
+++ b/client/views/home.html
@@ -1,6 +1,6 @@
 <template name="home">
   <div class="cover background-size-full">
-    <div class="">
+    <div class="home">
       <h1>Meteor Design Patterns</h1>
     </div>
   </div>
