--- a/.scss/style.scss
+++ b/.scss/style.scss
@@ -168,3 +168,11 @@ h2 {
     display: block;
     margin-bottom: 30px;
   }
+
+article{
+  margin-bottom:60px;
+}
+
+#disqus_thread{
+  margin-bottom:60px;
+}
