--- a/client/views/author/author.html
+++ b/client/views/author/author.html
@@ -1,12 +1,14 @@
 <template name="author">
   <article class="post-article">
-    <div class="cover background-size-full">
+    <div class="cover background-size-full profile">
+      {{> logo}}
+      <a href="/">&larr; back to Meteor Patterns</a>
       <div class="cover-content layout-single-column">
         <header class="cover-header notes-header-source">
           <h1 itemprop="name" name="title" class="post-title">{{profile.name}}</h1>
           <h2 name="subtitle" class="post-field subtitle post-subtitle">{{tldr}}</h2>
           <ul class="post-item-meta">
-            <li class="post-item-meta-item"><a href="{{authorUrl}}" class="post-item-author link link-secondary" title="Go to the profile of Nils Parker"><img src="https://avatars1.githubusercontent.com/u/395093?s=140" class="avatar-icon post-item-meta-avatar" title="Nils Parker"><span></span></a> &nbsp; &nbsp; &mdash; &nbsp; &nbsp; <a href="{{gistUrl}}" target="_blank" class="post-item-author link link-secondary" title="Go to the gist"><span>{{gistUrl}}</span></a></li>
+            <li class="post-item-meta-item"><a href="{{authorUrl}}" class="post-item-author link link-secondary" title="Go to the profile of {{getAuthor.profile.name}}"><img src="https://avatars1.githubusercontent.com/u/395093?s=140" class="avatar-icon post-item-meta-avatar" title="{{getAuthor.profile.name}}"><span></span></a> &nbsp; &nbsp; &mdash; &nbsp; &nbsp; <a href="{{gistUrl}}" target="_blank" class="post-item-author link link-secondary" title="Go to the gist"><span>{{gistUrl}}</span></a></li>
           </ul>
         </header>
       </div>
