--- a/client/views/home.html
+++ b/client/views/home.html
@@ -1,7 +1,8 @@
 <template name="home">
   <div class="cover background-size-full">
     <div class="home">
-      <h1>Meteor Design Patterns</h1>
+      {{> logo}}
+      <h1>Meteor<br/>Design Patterns</h1>
     </div>
   </div>
   <div class="layout-single-column">
