--- a/client/views/author/author.html
+++ b/client/views/author/author.html
@@ -2,7 +2,7 @@
   <article class="post-article">
     <div class="cover background-size-full profile">
       {{> logo}}
-      <a href="/">&larr; back to Meteor Patterns</a>
+      <a href="/" class="homeLink">&larr; back to Meteor Patterns</a>
       <div class="cover-content layout-single-column">
         <header class="cover-header notes-header-source">
           <h1 itemprop="name" name="title" class="post-title">{{profile.name}}</h1>
