--- a/client/views/home.html
+++ b/client/views/home.html
@@ -1,8 +1,11 @@
 <template name="home">
-  <div class="cover background-size-full">
-    <div class="home">
-      {{> logo}}
-      <h1>Meteor<br/>Design Patterns</h1>
+  <div class="cover background-size-full home">
+    {{> logo}}
+    <div class="cover-content layout-single-column">
+      <header class="cover-header notes-header-source">
+        <h1 itemprop="name" name="title" class="post-title">Meteor Patterns</h1>
+        <h2 name="subtitle" class="post-field subtitle post-subtitle">Design patterns and developer's insights & advice for Meteorjs development</h2>
+      </header>
     </div>
   </div>
   <div class="layout-single-column">
