--- a/.scss/style.scss
+++ b/.scss/style.scss
@@ -284,3 +284,29 @@ article{
     }
   }
 }
+
+.socialShare {
+  text-align: center;
+  h2 {
+    font-size: 2em;
+  }
+  a.button{
+    font-family: 'Source Sans Pro', "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 32px;
+    line-height: 1.2;
+    margin-bottom: 2px;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    padding: 0.3em;
+    border-radius:0.15em;
+    &.twitter{
+      background-color: #00aced;
+      color: white;
+    }
+    a.share[data-icon="Twitter"] {
+
+    }
+  }
+}
