--- a/client/style.css
+++ b/client/style.css
@@ -394,3 +394,30 @@ article {
 .applicationFooter .footer-row .logo svg {
   fill: #444443;
 }
+
+/* line 288, ../.scss/style.scss */
+.socialShare {
+  text-align: center;
+}
+/* line 290, ../.scss/style.scss */
+.socialShare h2 {
+  font-size: 2em;
+}
+/* line 293, ../.scss/style.scss */
+.socialShare a.button {
+  font-family: 'Source Sans Pro', "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 32px;
+  line-height: 1.2;
+  margin-bottom: 2px;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  padding: 0.3em;
+  border-radius: 0.15em;
+}
+/* line 304, ../.scss/style.scss */
+.socialShare a.button.twitter {
+  background-color: #00aced;
+  color: white;
+}
